<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.students.view.fragments.EditFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/edit_fragment_name"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/edit_student_name"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_fragment_second_name"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/edit_student_surname"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_fragment_course"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/edit_student_course"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_fragment_occupation"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/edit_student_occupation"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_fragment_results"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/edit_student_result"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_fragment_id"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/edit_student_id"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_name_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="0"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_surname_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="1"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_course_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="2"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_occupation_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="3"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_result_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="4"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_fragment_id_editor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_row="5"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </GridLayout>

    <Button
        android:id="@+id/edit_fragment_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
